unpackaged/main/default/objects/POC_Gearset_Deploy__mdt/POC_Gearset_Deploy__mdt.object-meta.xml
<CustomObject>
    <label>POC Gearset Deploy</label>
    <pluralLabel>POC Gearset Deployments</pluralLabel>
</CustomObject>