unpackaged/main/default/objects/POC_Gearset_Deploy__mdt/fields/POC_Check_Field__c.field-meta.xml
<CustomField>
    <fullName>POC_Check_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POC Check Field</label>
    <type>Checkbox</type>
</CustomField>