unpackaged/main/default/objects/POC_Gearset_Deploy__mdt/fields/POC_Number__c.field-meta.xml
<CustomField>
    <fullName>POC_Number__c</fullName>
    <label>POC Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>