unpackaged/main/default/objects/POC_Gearset_Deploy__mdt/fields/POC_TextArea__c.field-meta.xml
<CustomField>
    <fullName>POC_TextArea__c</fullName>
    <label>POC TextArea</label>
    <type>TextArea</type>
</CustomField>